fixed p el to align with nav el

--- a/css_menu/css/style.css
+++ b/css_menu/css/style.css
@@ -6,12 +6,13 @@
 
 body {
     text-align: center;
-}
-
-nav {
     max-width: 50%;
     min-width: 600px;
     margin: 1rem auto 1rem;
+}
+
+nav {
+    margin-bottom: 1rem;
     font-size: 3rem;
     border: 2px solid #333;
     line-height: 7rem;
